# hierarchical-fighting-boids

./: .gitignore  README.md  hierarchical-fighting-boids.sln
demo/: CMakeLists.txt  demo.vcxproj  demo.vcxproj.filters
demo/include/: Application.h  Boid.h
demo/resources/models/: spaceship.coyhot.3ds
demo/src/: Application.cpp  Boid.cpp  main.cpp
hierarchical-fighting-boids/: hierarchical-fighting-boids.sln  hierarchical-fighting-boids.vcxproj  hierarchical-fighting-boids.vcxproj.filters
hierarchical-fighting-boids/include/: IProjectileCallback.h  Projectile.h  Simulation.h  Unit.h  Vector3.h
hierarchical-fighting-boids/src/: IProjectileCallback.cpp  Projectile.cpp  Simulation.cpp  Unit.cpp  Vector3.cpp
